dag-dsl/tests/compile_fail/connect_for_each_wrong_arity.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/connect_for_each_wrong_arity.rs:62:26
   |
62 |     dag.connect_for_each(s.out.ok.result, c.inp.item);
   |         ---------------- ^^^^^^^^^^^^^^^ expected `OutPort<_, Vec<i64>>`, found `OutPort<Ok, i64>`
   |         |
   |         arguments to this method are incorrect
   |
   = note: expected struct `OutPort<_, Vec<i64>>`
              found struct `OutPort<nexus_dag_dsl::Ok, i64>`
note: method defined here
  --> src/typed.rs
   |
   |     pub fn connect_for_each<V, T>(&mut self, from: OutPort<V, Vec<T>>, to: InPort<T>) -> &mut Self {
   |            ^^^^^^^^^^^^^^^^
